<resources>
    <string name="app_name">iTax Mobi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appId">b8uq0Pb9IV1pInQGFLpg9sUFj0RqZK8mgwfFjHXk</string>
    <string name="clientKey">f6mEQtCQGOFB0TnUfYdRkkR7u66uGIPwP6Lr3UUJ</string>
    <string name="one">1. Download the P9 Returns form</string>
    <string name="two">2. Fill the P9 Return form</string>
    <string name="three">3. Provide the details requested below</string>
    <string name="four">4. Upload the Return form using Browse button</string>
    <string name="five">5. Click on submit to file your Tax returns</string>
    <string name="select_profession">Select Your Profession</string>
    <string name="select_returns_type">Select Type of Return</string>
    <string name="select_county">Select Your County</string>
    <string name="select_tax_type">Select Type of Tax</string>
    <string name="DatePicker">DatePicker</string>
    <string name="doNotHavePin">Don\'t have a pin? Register Here.</string>
    <string name="havePin">If you already have a PIN, Login Here.</string>
    <string name="slogan">Tax just got simpler.</string>
    <string name="salutation">Welcome Human</string>
    <string name="register">Register</string>
    <string name="selectRegistrationDate">Select PIN Registration Date</string>
    <string name="employeesPin">Enter Employees PIN</string>
    <string name="enterTaxDetails">Enter Your Tax Details</string>
    <string name="submit">Submit</string>
    <string name="uploadForm">Upload form</string>
    <string name="returnsPeriodTo">Returns period to</string>
    <string name="returnsPeriodFrom">Returns Period From</string>
    <string name="next">Next</string>
    <string name="districtOfResidence">Enter your district of residence.</string>
    <string name="building">Enter the name of the building.</string>
    <string name="townCity">Enter your town or city of residence.</string>
    <string name="street">Enter the street on which you live in</string>
    <string name="enterResidentialDetails">Enter Your Residential Details</string>
    <string name="postalAddressTown">Enter your postal address town.</string>
    <string name="postalCode">Enter your postal code</string>
    <string name="email">Enter your email address.</string>
    <string name="phoneNumber">Enter your mobile phone number.</string>
    <string name="birthDate">Enter your date of birth</string>
    <string name="taxAreaLocality">Enter your Tax area or locality</string>
    <string name="nationalIdNumber">Enter National ID Number</string>
    <string name="enterPersonalDetails">Enter Your Personal Details</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="kraPIN">KRA PIN</string>
    <string name="consultCalculatePayments">Consult and Calculate your annual payments.</string>
    <string name="ePayments">e-Payments</string>
    <string name="consultFileReturns">Consult and File your Returns.</string>
    <string name="eReturns">e-Returns</string>
    <string name="editRegistrationStatus">Edit your registration status .</string>
    <string name="eRegistration">e-Registration</string>
    <string name="returns">Returns.</string>
    <string name="fileReturns">File Your Returns.</string>
    <string name="consultEReturns">Consult e-Returns.</string>
    <string name="askAboutTax">Ask Questions related to filing Returns</string>
    <string name="eAmendments">e-Amendments.</string>
    <string name="editRegistrationDetails">Edit Your Registration Details.</string>
    <string name="eCancelation">e-Cancelation.</string>
    <string name="cancelItaxAccount">Cancel your iTax Account</string>
    <string name="eDormance">e-Dormance.</string>
    <string name="accountDeferredTax">Account for Deferred Tax Returns</string>
    <string name="accountPassword">Enter Password for ITax Account</string>
    <string name="continueBtn">Continue</string>
    <string name="tulipeUshure">Tulipe Ushuru Tujitegemee.</string>
    <string name="returnsInstructions">Follow The Instructions Below and Fill In All The Fields Before You Submit Your Returns</string>

    <string-array name="employee_array">
        <item>Accountants</item>
        <item>Architects Quantity Surveyors</item>
        <item>Certified Public Secretaries</item>
        <item>Engineers</item>
        <item>Land Surveyor</item>
        <item>Legal</item>
        <item>Medical</item>
        <item>Others</item>
        <item>Surveyor</item>
        <item>Veterinary Surgeons Veterinary</item>
    </string-array>

    <string-array name="type_of_returns_array">
        <item>Original</item>
        <item>Ammend</item>
    </string-array>

    <string-array name="type_of_tax_array">
        <item>PAYE</item>
        <item>Income Tax</item>
    </string-array>

    <string-array name="county">
        <item>Baringo</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Elgeyo/Marakwet</item>
        <item>Embu</item>
        <item>HomaBay</item>
        <item>Isiolo</item>
        <item>Kakamega</item>
        <item>Kericho</item>
        <item>Kilifi</item>
        <item>Kirinyaga</item>
        <item>Kisii</item>
        <item>Kitui</item>
        <item>Kwale</item>
        <item>Lamu</item>
        <item>Machakos</item>
        <item>Makueni</item>
        <item>Mandera</item>
        <item>Nairobi</item>
        <item>Nandi</item>
        <item>Narok</item>
        <item>Nyamira</item>
        <item>Nyandarua</item>
        <item>Nyeri</item>
        <item>Samburu</item>
        <item>Siaya</item>
        <item>Taita Taveta</item>
        <item>Tana River</item>
        <item>Tharaka Nithi</item>
        <item>Trans Nzoia</item>
        <item>Turkana</item>
        <item>Uasin Gishu</item>
        <item>Vihiga</item>
        <item>WAJIR</item>
        <item>WEST POKOT</item>
    </string-array>



</resources>
