<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pin_registration">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enterPersonalDetails"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        android:layout_marginTop="15dp"/>



    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nationalIdNumber"
            android:id="@+id/idNumberText"
            android:padding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birthDateText"
        android:hint="@string/birthDate"
        android:padding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taxRegionText"
        android:hint="@string/taxAreaLocality"
        android:layout_alignParentStart="true"
        android:padding="20dp"
         />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberText"
        android:hint="@string/phoneNumber"
        android:paddingLeft="20dp"
         />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailText"
        android:hint="@string/email"
        android:padding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/postalCodeText"
        android:hint="@string/postalCode"
        android:padding="20dp"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/postalAddressTownText"
        android:hint="@string/postalAddressTown"
        android:padding="20dp"
         />
    <Spinner
        android:id="@+id/employeeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:padding="20dp"
        android:prompt="@string/select_profession"
        android:entries="@array/employee_array"
        />



    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>


    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="17sp"
        android:textColor="@color/primary"
        android:id="@+id/regOneNextBtn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_border"
        />


</LinearLayout>


