<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/primary_dark">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/itaxTitle"
            android:textSize="60sp"
            android:textColor="@color/primary_text"
            android:text="@string/app_name"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/tulipeText"
            android:layout_below="@+id/itaxTitle"
            android:layout_marginTop="5dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:text="@string/tulipeUshure"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="140dp"
            android:id="@+id/continueBtn"
            android:layout_marginTop="45dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tulipeText"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/continueBtn"
            android:background="@drawable/welcome_border"/>
    </RelativeLayout>




</RelativeLayout>