<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />




    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:id="@+id/e_registration_card"
        android:clickable="true"
        android:layout_gravity="center"
        card_view:cardCornerRadius="0dp"
        android:elevation="20dp"
        android:layout_marginTop = "10dp"
        android:layout_marginLeft = "15dp"
        android:layout_marginRight = "15dp"
        card_view:cardBackgroundColor="@color/primary_dark">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/amendment_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eAmendments"
                android:textSize="30sp"
                android:layout_marginTop = "15dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editRegistrationDetails"
                android:layout_marginTop = "90dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>




    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/e_registration_card"
        android:clickable="true"
        android:id="@+id/e_cancelation_card"
        android:layout_marginTop = "25dp"
        android:layout_marginLeft = "15dp"
        android:layout_marginRight = "15dip"
        android:layout_gravity="center"
        card_view:cardCornerRadius="0dp"
        android:elevation="20dp"
        card_view:cardBackgroundColor="@color/primary_dark">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/e_cancelation_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop = "15dp"
                android:text="@string/eCancelation"
                android:textSize="30sp"
                android:gravity="center"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelItaxAccount"
                android:layout_marginTop = "90dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>



    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/e_cancelation_card"
        android:clickable="true"
        android:id="@+id/e_dormance_card"
        android:layout_marginTop = "25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft = "15dp"
        android:layout_marginRight = "15dip"
        android:layout_gravity="center"
        card_view:cardCornerRadius="0dp"
        android:elevation="20dp"
        card_view:cardBackgroundColor="@color/primary_dark">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/e_dormance_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop = "15dp"
                android:text="@string/eDormance"
                android:textSize="30sp"
                android:gravity="center"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accountDeferredTax"
                android:layout_marginTop = "90dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>



    </android.support.v7.widget.CardView>
</LinearLayout>


</ScrollView>

