<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />



    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="170dp"

        android:id="@+id/returns_card"
        android:clickable="true"
        android:layout_gravity="center"
        card_view:cardCornerRadius="0dp"
        android:elevation="20dp"
        android:layout_marginTop = "56dp"
        android:layout_marginLeft = "15dp"
        android:layout_marginRight = "15dp"
        card_view:cardBackgroundColor="@color/primary_dark">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/returns_heading"
                android:layout_marginTop = "15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/returns"
                android:textSize="30sp"
                android:gravity="center"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fileReturns"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:layout_marginTop = "50dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>




    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="170dp"

        android:layout_below="@id/returns_card"
        android:clickable="true"
        android:id="@+id/consult_returns_card"
        android:layout_marginTop = "10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft = "15dp"
        android:layout_marginRight = "15dip"
        android:layout_gravity="center"
        card_view:cardCornerRadius="0dp"
        android:elevation="20dp"
        card_view:cardBackgroundColor="@color/primary_dark">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/consult_returns_heading"
                android:layout_marginTop = "15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consultEReturns"
                android:textSize="30sp"
                android:gravity="center"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/askAboutTax"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@android:color/white"
                android:layout_marginTop = "50dp"
                android:textSize="20sp"
                />

        </LinearLayout>



    </android.support.v7.widget.CardView>



</LinearLayout>
</ScrollView>

