<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/primary_dark"
            android:fitsSystemWindows="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="76dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">




        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:id="@+id/kraLogo"
            android:src="@drawable/itax"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            app:riv_corner_radius="40dip"
            app:riv_border_width="1dip"
            app:riv_border_color="#fff"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="true" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPinText"
            android:hint="@string/kraPIN"
            android:focusable="true"
            android:textColorHint="@color/primary_text"
            android:layout_marginTop="46dp"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPasswordText"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/primary_text"
            android:hint="@string/password" />




        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:id="@+id/btnLogin"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_border"
            />

        <TextView android:id="@+id/registerLinkText"
                  android:layout_marginTop="15dp"
                  android:textColor="#000"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="No account yet ? Create one"
                  android:gravity="center"
                  android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>